2018-05-04  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Epiphany (GNOME Web) says "Error downloading: Service Unavailable." when trying to download an image from discogs.com
        https://bugs.webkit.org/show_bug.cgi?id=174730

        Reviewed by Michael Catanzaro.

        Update unit tests to check that User-Agent header is included in HTTP download requests.

        * TestWebKitAPI/Tests/WebKitGLib/TestDownloads.cpp:
        (testDownloadRemoteFile):
        (testWebViewDownloadURI):
        (testPolicyResponseDownload):
        (testPolicyResponseDownloadCancel):
        (testDownloadMIMEType):
        (testContextMenuDownloadActions):

2018-05-03  Ross Kirsling  <ross.kirsling@sony.com>

        [WinCairo] Test archive must use Python zipfile, just like build product.
        https://bugs.webkit.org/show_bug.cgi?id=185265

        Reviewed by Per Arne Vollan.

        * BuildSlaveSupport/test-result-archive:
        (archive_test_results):
        Copy over Win32-oriented archiving logic from built-product-archive.

2018-05-03  Leo Balter  <leonardo.balter@gmail.com>

        cleanup modules usage for the Test262-Runner
        https://bugs.webkit.org/show_bug.cgi?id=185263

        Reviewed by Michael Saboff.

        * Scripts/test262-runner:
        * Scripts/test262/Runner.pm:
        (processCLI):

2018-05-03  Valerie R Young  <valerie@bocoup.com>

        test262/Runner.pm: minor fixes
        https://bugs.webkit.org/show_bug.cgi?id=185250

        Reviewed by Michael Saboff.

        Add comments, change output and fix bug: unintended interpolation
        of filename when running jsc.

        * Scripts/test262/Runner.pm:
        (processCLI):
        (main):
        (runTest):

2018-05-03  Chris Dumez  <cdumez@apple.com>

        Load hangs if the WebProcess fails to launch
        https://bugs.webkit.org/show_bug.cgi?id=185225
        <rdar://problem/38249058>

        Reviewed by Geoff Garen.

        Add API test coverage.
